Issue #1798508 by mausolos: Fix hidden scrollbar.

--- a/css/modal_forms_popup.css
+++ b/css/modal_forms_popup.css
@@ -36,16 +36,10 @@ div.modal-forms-modal-content {
   padding: 0;
 }
 
-div.modal-forms-modal-content .modal-scroll {
-  overflow: hidden;
-  overflow-y: auto;
-}
-
 div.modal-forms-modal-content .popups-container {
   overflow: hidden;
   height: 100%;
   background: #fff;
-  padding: 5px;
   text-align: left;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
@@ -54,6 +48,8 @@ div.modal-forms-modal-content .popups-container {
 
 div.modal-forms-modal-content .modal-header {
   background-color: transparent;
+  padding: 0.5em 1em 0 1em;
+  min-height: 25px;
 }
 
 div.modal-forms-modal-content .modal-title {
@@ -62,16 +58,14 @@ div.modal-forms-modal-content .modal-title {
 }
 
 div.modal-forms-modal-content .popups-close {
-  float: none;
-  text-align: left;
+  float: right;
   cursor: pointer;
-  position: absolute;
-  top: 5px;
-  right: 5px;
   background: url(../images/controls.png) -25px 0px no-repeat;
   width: 25px;
   height: 25px;
-  text-indent: -9999px;
+  text-indent: 100%;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 div.modal-forms-modal-content .popups-close:hover {
